@@ -1,3 +1,8 @@
+2014-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS.pm: support for Cisco Nexus;
+	persistent ifIndex for Nexus
+
 2014-10-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/Fortinet.pm: new discovery module for
